@@ -4,6 +4,7 @@ use warnings FATAL => 'all';
 use Test::More;
 use if $ENV{AUTHOR_TESTING}, 'Test::Warnings';
 use Test::DZil;
+use Test::Deep;
 use Path::Tiny;
 use Test::Fatal;
 
@@ -66,6 +67,22 @@ like(
     qr/^\Q$pattern\E$/m,
     'code inserted into Makefile.PL',
 );
+
+cmp_deeply(
+    $tzil->distmeta,
+    superhashof({
+        prereqs => {
+            configure => {
+                requires => {
+                    'Devel::CheckLib' => '0.9',
+                    'ExtUtils::MakeMaker' => ignore,    # populated by [MakeMaker],
+                },
+            },
+            # build => ignore, # if using ModuleBuild
+        },
+    }),
+    'prereqs are properly injected for the configure phase',
+) or diag 'got distmeta: ', explain $tzil->distmeta;
 
 diag 'got log messages: ', explain $tzil->log_messages
     if not Test::Builder->new->is_passing;
