@@ -8,6 +8,7 @@ my $code = path('t', '01-basic.t')->slurp_utf8;
 
 $code =~ s/MakeMaker/ModuleBuildTiny/;
 $code =~ s/Makefile.PL/Build.PL/g;
+$code =~ s/ExtUtils::MakeMaker/Module::Build::Tiny/;
 
 eval $code;
 die $@ if $@;
